prevent animations from overlapping

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -57,3 +57,7 @@ body {
 		transform:         translateY(0)
 	}
 }
+
+.map-icon {
+  cursor: pointer;
+}
